--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ img:nth-child(2) {
     display: none;
 }
 
+/* OVERLAY AND OVERALL BOX FOR CONTENT*/
 .hero_content_box {
     position: absolute;
     top: 0;
@@ -40,10 +41,13 @@ img:nth-child(2) {
     justify-content: center;
 }
 
+
+/* LITTLE BOX FOR CONTENT */
 .hero_content {
     width: 665px;
 }
 
+/* EDITING CONTENT */
 .hero_content h6 {
     font-weight: medium;
     font-size: 14px;
@@ -123,7 +127,7 @@ img:nth-child(2) {
     img:nth-child(2) {
         display: flex;
         width: auto;
-        height: 70vw;
+        height: 80vw;
     }
 
     .hero_content h6 {
@@ -147,8 +151,56 @@ img:nth-child(2) {
 }
 
 @media screen and (max-width: 595px) {
-    .hero_content p{
-        font-size: 1.4vw;
-        margin: 0.8vw 0 3.5vw 0;
+    img:nth-child(2) {
+        display: flex;
+        width: auto;
+        height: 100vw;
+    }
+
+    .hero_content h6 {
+        font-size: 2vw;
+    }
+
+    .hero_content h1 {
+        margin: 0;
+        font-size: 8vw;
+    }
+
+    .hero_content p {
+        font-size: 3vw;
+        margin: 1vw 0 3vw 0;
+    }
+
+    .hero_content .btn_blue {
+        padding: 2.5vw 4.5vw;
+        font-size: 4vw;
+    }
+}
+
+
+@media screen and (max-width: 400px) {
+    img:nth-child(2) {
+        display: flex;
+        width: auto;
+        height: 130vw;
+    }
+
+    .hero_content h6 {
+        font-size: 3vw;
+    }
+
+    .hero_content h1 {
+        margin: 0;
+        font-size: 10vw;
+    }
+
+    .hero_content p {
+        font-size: 4vw;
+        margin: 1vw 0 10vw 0;
+    }
+
+    .hero_content .btn_blue {
+        padding: 3.5vw 5vw;
+        font-size: 5vw;
     }
 }
